# mirofish

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  SETUP.md  docker-compose.yml  fly.toml  index.html  package.json  railway.toml  render.yaml  ski_server.py
assets/: index-8wfTkTBT.css  index-DfpcidSY.js
backend/: pyproject.toml  requirements.txt  run.py  run_unified.py  wsgi.py
backend/app/: cache.py  (+7 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: linkedin_scout.py  linkedin_sender.py  requirements.txt
ski_assistant/: __init__.py  decision_engine.py  main.py  simulation.py  visualization.py
weather_alpha/: Dockerfile  __init__.py  __main__.py  api.py  cli.py  config.py  engine.py  pyproject.toml  scheduler.py
weather_alpha/alerts/: __init__.py  telegram.py
weather_alpha/edge/: __init__.py  adjusted_probability.py  crowd_bias.py  historical_bias.py  liquidity.py  opportunity_score.py  weather_model.py
weather_alpha/execution/: __init__.py  live.py  paper.py  router.py
weather_alpha/hedging/: __init__.py  cross_city.py  cross_threshold.py  time_hedge.py
weather_alpha/reports/: __init__.py  opportunity_card.py
weather_alpha/risk/: __init__.py  bankroll.py  kelly.py  portfolio.py
weather_alpha/storage/: __init__.py  dao.py  db.py  schema.sql
weather_alpha/templates/: _base.css  history.html  home.html  opportunities.html  portfolio.html
weather_alpha/tests/: conftest.py  test_edge.py  test_gamma_parser.py  test_hedging.py  test_kelly.py  test_opportunity_card.py  test_router.py  test_storage.py
(+71 files in other folders)
