[project]
name = "weather-alpha"
version = "0.1.0"
description = "Polymarket weather-market alpha engine (forecast ingestion, edge engine, hedging, sizing, paper/live execution)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "meteostat>=1.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
live = ["py-clob-client>=0.17"]
alerts = ["python-telegram-bot>=21"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
weather-alpha = "weather_alpha.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".."]
